Add company info sections

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -141,3 +141,41 @@ html {
   line-height: 1.4;
   text-align: center;
 }
+.companyInfo {
+  display:flex;
+  width: 100%;
+  justify-content: center;
+}
+.companyInfo .container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4rem;
+  width: 840px;
+}
+.companyInfo .container .info {
+  display:flex;
+  width: 35%;
+  height: auto;
+  flex-direction: column;
+  align-items:flex-start;
+  margin-bottom: 5rem;
+}
+.companyInfo .container .info .title {
+  background-color: cadetblue;
+  height: 2rem;
+  padding-left: 1.25rem;
+  margin-bottom: 1rem;
+  width: 10rem;
+}
+.companyInfo .container .info .title h2 {
+  font-family: Helvetica;
+  font-weight: bold;
+  font-size: 1rem;
+  color: white;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.companyInfo .container .info p {
+  font-family: Helvetica;
+  line-height: 1.2;
+}
